<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ActivityRelation">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/bottomBar"
            android:layout_alignParentBottom="true">

        <android.support.design.widget.BottomNavigationView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/bottomNavView_Bar"
                android:background="@color/lightgray"
                app:menu="@menu/bottom_navigation_menu">

        </android.support.design.widget.BottomNavigationView>
    </RelativeLayout>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <android.support.v7.widget.CardView
                android:id="@+id/sub1"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:layout_margin="10dp"
                android:foreground="?android:attr/selectableItemBackground">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="20dp"
                    android:orientation="vertical">


                <TextView
                        android:id="@+id/intro"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:text="@string/intro"
                        android:textSize="14sp" />


                <TableLayout
                        android:id="@+id/table"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:orientation="horizontal"
                        android:stretchColumns="*">

                    <TableRow
                            android:id="@+id/tableRow1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#B4E2C0">

                        <TextView
                                android:id="@+id/textView1"
                                android:padding="5dp"
                                android:text="@string/operator"
                                android:textAlignment="center"
                                android:textSize="14sp"
                                android:textStyle="bold" />

                        <LinearLayout
                                android:layout_width="1dp"
                                android:layout_height="match_parent">

                            <View style="@style/Divider" />
                        </LinearLayout>

                        <TextView
                                android:id="@+id/textView2"
                                android:padding="5dp"
                                android:text="@string/descrpt"
                                android:textAlignment="center"
                                android:textSize="14sp"
                                android:textStyle="bold" />

                        <LinearLayout
                                android:layout_width="1dp"
                                android:layout_height="match_parent">

                            <View style="@style/Divider" />
                        </LinearLayout>

                        <TextView
                                android:id="@+id/textView3"
                                android:padding="5dp"
                                android:paddingBottom="10dp"
                                android:text="@string/expression"
                                android:textAlignment="center"
                                android:textSize="14sp"
                                android:textStyle="bold" />


                    </TableRow>

                    <TableRow
                            android:id="@+id/tableRow2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#E6F5EA">

                        <TextView
                                android:id="@+id/textView5"
                                android:padding="5dp"
                                android:text="@string/moreThan"
                                android:textAlignment="center"
                                android:textSize="14sp" />

                        <LinearLayout
                                android:layout_width="1dp"
                                android:layout_height="match_parent">

                            <View style="@style/Divider" />
                        </LinearLayout>

                        <TextView
                                android:id="@+id/textView6"
                                android:padding="5dp"
                                android:text="@string/greaterThan"
                                android:textAlignment="center"
                                android:textSize="14sp" />

                        <LinearLayout
                                android:layout_width="1dp"
                                android:layout_height="match_parent">

                            <View style="@style/Divider" />
                        </LinearLayout>

                        <TextView
                                android:id="@+id/textView7"
                                android:padding="5dp"
                                android:paddingBottom="10dp"
                                android:text="@string/aGreaterb"
                                android:textAlignment="center"
                                android:textSize="14sp" />

                    </TableRow>


                    <TableRow
                            android:id="@+id/tableRow3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#D1FFDD">

                        <TextView
                                android:id="@+id/textView9"
                                android:padding="5dp"
                                android:text="@string/lessthan"
                                android:textAlignment="center"
                                android:textSize="14sp" />

                        <LinearLayout
                                android:layout_width="1dp"
                                android:layout_height="match_parent">

                            <View style="@style/Divider" />
                        </LinearLayout>

                        <TextView
                                android:id="@+id/textView10"
                                android:padding="5dp"
                                android:text="@string/lessThan"
                                android:textAlignment="center"
                                android:textSize="14sp" />

                        <LinearLayout
                                android:layout_width="1dp"
                                android:layout_height="match_parent">

                            <View style="@style/Divider" />
                        </LinearLayout>

                        <TextView
                                android:id="@+id/textView11"
                                android:padding="5dp"
                                android:paddingBottom="10dp"
                                android:text="@string/aLessThanb"
                                android:textAlignment="center"
                                android:textSize="14sp" />


                    </TableRow>


                    <TableRow
                            android:id="@+id/tableRow4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#E6F5EA">

                        <TextView
                                android:id="@+id/textView13"
                                android:padding="5dp"
                                android:text="@string/greaterEqual"
                                android:textAlignment="center"
                                android:textSize="14sp" />

                        <LinearLayout
                                android:layout_width="1dp"
                                android:layout_height="match_parent">

                            <View style="@style/Divider" />
                        </LinearLayout>

                        <TextView
                                android:id="@+id/textView14"
                                android:padding="5dp"
                                android:text="@string/greaterEqual2"
                                android:textAlignment="center"
                                android:textSize="14sp" />

                        <LinearLayout
                                android:layout_width="1dp"
                                android:layout_height="match_parent">

                            <View style="@style/Divider" />
                        </LinearLayout>

                        <TextView
                                android:id="@+id/textView15"
                                android:padding="5dp"
                                android:paddingBottom="10dp"
                                android:text="@string/aGreaterEqualb"
                                android:textAlignment="center"
                                android:textSize="14sp" />


                    </TableRow>


                    <TableRow
                            android:id="@+id/tableRow5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#D1FFDD">

                        <TextView
                                android:id="@+id/textView17"
                                android:padding="5dp"
                                android:text="@string/lessThanEqual"
                                android:textAlignment="center"
                                android:textSize="14sp" />

                        <LinearLayout
                                android:layout_width="1dp"
                                android:layout_height="match_parent">

                            <View style="@style/Divider" />
                        </LinearLayout>

                        <TextView
                                android:id="@+id/textView18"
                                android:padding="5dp"
                                android:text="@string/lessThanEqual2"
                                android:textAlignment="center"
                                android:textSize="14sp" />

                        <LinearLayout
                                android:layout_width="1dp"
                                android:layout_height="match_parent">

                            <View style="@style/Divider" />
                        </LinearLayout>

                        <TextView
                                android:id="@+id/textView19"
                                android:padding="5dp"
                                android:paddingBottom="10dp"
                                android:text="@string/aLesserEqualb"
                                android:textAlignment="center"
                                android:textSize="14sp" />


                    </TableRow>


                    <TableRow
                            android:id="@+id/tableRow6"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#E6F5EA">

                        <TextView
                                android:id="@+id/textView21"
                                android:padding="5dp"
                                android:text="@string/equal"
                                android:textAlignment="center"
                                android:textSize="14sp" />

                        <LinearLayout
                                android:layout_width="1dp"
                                android:layout_height="match_parent">

                            <View style="@style/Divider" />
                        </LinearLayout>

                        <TextView
                                android:id="@+id/textView22"
                                android:padding="5dp"
                                android:text="@string/isEqualTo"
                                android:textAlignment="center"
                                android:textSize="14sp" />

                        <LinearLayout
                                android:layout_width="1dp"
                                android:layout_height="match_parent">

                            <View style="@style/Divider" />
                        </LinearLayout>

                        <TextView
                                android:id="@+id/textView23"
                                android:padding="5dp"
                                android:paddingBottom="10dp"
                                android:text="@string/aEqualb"
                                android:textAlignment="center"
                                android:textSize="14sp" />

                    </TableRow>


                    <TableRow
                            android:id="@+id/tableRow7"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#D1FFDD">

                        <TextView
                                android:id="@+id/textView25"
                                android:padding="5dp"
                                android:text="@string/notEqual"
                                android:textAlignment="center"
                                android:textSize="14sp" />

                        <LinearLayout
                                android:layout_width="1dp"
                                android:layout_height="match_parent">

                            <View style="@style/Divider" />
                        </LinearLayout>

                        <TextView
                                android:id="@+id/textView26"
                                android:padding="5dp"
                                android:text="@string/notEqualTo"
                                android:textAlignment="center"
                                android:textSize="14sp" />

                        <LinearLayout
                                android:layout_width="1dp"
                                android:layout_height="match_parent">

                            <View style="@style/Divider" />
                        </LinearLayout>

                        <TextView
                                android:id="@+id/textView27"
                                android:padding="5dp"
                                android:paddingBottom="10dp"
                                android:text="@string/aNotEqualb"
                                android:textAlignment="center"
                                android:textSize="14sp" />

                    </TableRow>

                </TableLayout>

                <TextView
                        android:id="@+id/input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:background="#DADADA"
                        android:text="@string/input"
                        android:textSize="14sp" />

                <TextView
                        android:id="@+id/output"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:background="#DADADA"
                        android:text="@string/output"
                        android:textSize="14sp" />

                <RelativeLayout
                        android:id="@+id/buttonsAlignment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">


                    <Button
                            android:id="@+id/next"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:text="@string/btncontinue" />

                </RelativeLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </ScrollView>
</LinearLayout>