<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ActivityCommentQuiz">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <android.support.v7.widget.CardView
                android:foreground="?android:attr/selectableItemBackground"
                android:id="@+id/sub1"
                android:layout_width="match_parent"
                android:layout_height="600dp"
                android:layout_margin="10dp">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_margin="20dp">

                <TextView
                        android:id="@+id/question"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question"
                        android:textSize="20sp"/>

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:text="@string/code_example1"
                        android:id="@+id/code_example1"
                        android:padding="5dp"/>

                <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    <EditText
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:inputType="textPersonName"
                            android:text="@string/answer1"
                            android:ems="10"
                            android:maxLength="2"
                            android:id="@+id/et_answer3"
                            android:textSize="15sp"
                            android:background="@color/editTextBG"/>

                    <TextView
                            android:layout_width="200dp"
                            android:layout_height="30dp"
                            android:text="@string/code_example2"
                            android:id="@+id/code_example2"
                            android:layout_alignBottom="@+id/et_answer3"
                            android:layout_alignParentTop="true"
                            android:layout_toRightOf="@+id/et_answer3"
                            android:padding="5dp"/>

                </RelativeLayout>

                <TextView
                        android:layout_width="200dp"
                        android:layout_height="30dp"
                        android:text="@string/code_example3"
                        android:id="@+id/code_example3"
                        android:padding="5dp"/>

                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <EditText
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:inputType="textPersonName"
                            android:text="@string/answer2"
                            android:ems="10"
                            android:maxLength="2"
                            android:id="@+id/et_answer4"
                            android:textSize="15sp"
                            android:background="@color/editTextBG"/>

                    <TextView
                            android:layout_width="100dp"
                            android:layout_height="30dp"
                            android:text="@string/code_example4"
                            android:id="@+id/code_example4"
                            android:layout_alignBottom="@+id/et_answer4"
                            android:layout_alignParentTop="true"
                            android:layout_toRightOf="@+id/et_answer4"
                            android:padding="5dp"/>

                </RelativeLayout>

                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <TextView
                            android:layout_width="100dp"
                            android:layout_height="30dp"
                            android:text="@string/code_example4"
                            android:id="@+id/code_example6"
                            android:padding="5dp"/>

                    <EditText
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:inputType="textPersonName"
                            android:text="@string/answer2"
                            android:ems="10"
                            android:maxLength="2"
                            android:id="@+id/et_answer5"
                            android:textSize="15sp"
                            android:layout_alignBottom="@+id/code_example6"
                            android:layout_alignParentTop="true"
                            android:layout_toRightOf="@+id/code_example6"
                            android:background="@color/editTextBG"/>

                </RelativeLayout>

                <RelativeLayout android:layout_width="match_parent"
                                android:layout_height="match_parent">
                <Button
                        android:text="@string/submit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimary"
                        android:fontFamily="sans-serif-medium"
                        android:textColor="@color/white"
                        android:id="@+id/comment_submit"
                        android:layout_marginTop="16dp"/>


                <Button
                        android:text="@string/btncontinue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimary"
                        android:fontFamily="sans-serif-medium"
                        android:textColor="@color/white"
                        android:id="@+id/continueToNextPage"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="16dp"/>
                </RelativeLayout>

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/code_example5"
                        android:id="@+id/code_example5"
                        android:background="#DADADA"
                        android:padding="5dp"
                        android:layout_marginTop="16dp"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </ScrollView>
</LinearLayout>